# kreditkarten-app

./: .gitignore  BACKLOG.md  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.ddev/: config.yaml  docker-compose.kreditkarten.yaml
.ddev/nginx_full/: nginx-site.conf
docs/handbuch/: 01-erste-schritte.md  03-belege-zuordnen.md  04-kategorisierung.md
parsers/: beleg_parser.py  csv_parser.py  pdf_parser.py
public/: index.html
services/health/: Dockerfile
services/health/app/: main.py
services/kreditkarten/: .env.example  BRIEFING.md  CLAUDE.md  CODE_SNIPPETS.md  Dockerfile  LICENSE  app.py  docker-compose.yml  matching.py  pyproject.toml
services/kreditkarten/docs/handbuch/: 02-import.md  05-bewirtungsbelege.md  06-export-archivierung.md  07-konten-verwalten.md
services/kreditkarten/docs/plans/: 2026-01-20-benutzerhandbuch-design.md  2026-01-20-dashboard-api-docs-design.md
services/kreditkarten/parsers/: __init__.py  beleg_parser.py  csv_parser.py  pdf_parser.py
services/kreditkarten/templates/: index.html
services/kreditkarten/tests/: conftest.py  test_api.py
templates/: index.html
tests/: test_api.py  test_security.py
